# UBB-Projects

./: .gitignore  README.md
First Year/Semester 1/Computer Systems Architecture/Laboratory 11/: lab11.asm  lab11_proc.asm  lab11_proc.lst
First Year/Semester 1/Computer Systems Architecture/Laboratory 12/: lab12.c  lab12_utilits.asm
First Year/Semester 2/Data Structures and Algorithms/SortedBag/: BSTNode.cpp  BSTNode.h  CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
First Year/Semester 2/Data Structures and Algorithms/SortedMap/: App.cpp  ExtendedTest.cpp  SMIterator.cpp  SMIterator.h  SortedMap.cpp  SortedMap.h
First Year/Semester 2/Data Structures and Algorithms/SortedMultiMap/: CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
First Year/Semester 2/Data Structures and Algorithms/SortedSet/: ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
First Year/Semester 2/Graph Algorithms/Project 1/: Graph.py  Main.py
First Year/Semester 2/Graph Algorithms/Project 2/: Graph.py  Trees.py  UI.py  edges.txt  main.py  random_graph.out
First Year/Semester 2/Graph Algorithms/Project 3/: Graph.py  UI.py  edges.txt  edgestry.txt  main.py
First Year/Semester 2/Object Oriented Programming/Laboratory 12/a11-12-913-Hognogi-Cristina/: CMakeLists.txt  shoppingBasket.csv  shoppingBasket.html  trenchCoat.txt
First Year/Semester 2/Object Oriented Programming/Laboratory 12/a11-12-913-Hognogi-Cristina/Domain/: Domain.h
First Year/Semester 2/Object Oriented Programming/Laboratory 12/a11-12-913-Hognogi-Cristina/GUI/: GUI.cpp  GUI.h
First Year/Semester 2/Object Oriented Programming/Laboratory 12/a11-12-913-Hognogi-Cristina/Repository/: RepoAdmin.h  RepoUser.h  RepoUserCSV.cpp  RepoUserCSV.h  RepoUserHTML.cpp  RepoUserHTML.h
First Year/Semester 2/Object Oriented Programming/Laboratory 12/a11-12-913-Hognogi-Cristina/Service/: ServiceAdmin.cpp  ServiceAdmin.h  ServiceUser.cpp  ServiceUser.h
First Year/Semester 2/Object Oriented Programming/Laboratory 12/a11-12-913-Hognogi-Cristina/Start/: Main.cpp
First Year/Semester 2/Object Oriented Programming/Laboratory 12/a11-12-913-Hognogi-Cristina/Validator/: Validator.h
Third Year/Semester 5/Parallel and Distributed Programming/Laboratory 1/: CMakeLists.txt  Main  README.md  main.cpp
Third Year/Semester 5/Parallel and Distributed Programming/Laboratory 1/Example/: outline.txt.txt
Third Year/Semester 5/Parallel and Distributed Programming/Laboratory 1/Example/CPP/: atomic.cpp  deadlock.cpp  mutex.cpp  recursive_mutex.cpp  shared_mutex.cpp  threading.cpp
Third Year/Semester 5/Parallel and Distributed Programming/Laboratory 1/Example/Java/lab1/src/lab1/: Main.java
Third Year/Semester 5/Parallel and Distributed Programming/Laboratory 1/Example/Java/lab1/src/lab1/deadlock/: Deadlock.java  DeadlockPrevention.java
Third Year/Semester 5/Parallel and Distributed Programming/Laboratory 1/Example/Java/lab1/src/lab1/synchronization/: AtomicVarCounter.java  Counter.java  GranularSynchronizedCounter.java  ReentrantSynchronizedCounter.java  SharedLockCounter.java  SimpleCounter.java  SynchronizedCounter.java
Third Year/Semester 5/Parallel and Distributed Programming/Laboratory 1/Example/Python/: aba_problem.py  atomic_variables.py  multiprocess.py  mutex.py  threading_lab.py
(+1054 files in other folders)
